syntax = "proto3";

package songs;

option go_package = "./serviciosCancion;serviciosCancion";

// DTO para representar un Género
message Genre {
    int32 id = 1;
    string name = 2;
}

// DTO para representar una Canción
message Song {
    int32 id = 1;
    string title = 2;
    string artist = 3;
    int32 release_year = 4;
    string album = 5;
    string duration = 6;
    string filename = 7; // Nombre del archivo .mp3 para la reproducción
    int32 genre_id = 8;
}

// --- RPCs ---

message GetGenresRequest {}

message GetGenresResponse {
    repeated Genre genres = 1;
}

message GetSongsByGenreRequest {
    int32 genre_id = 1;
}

message GetSongsByGenreResponse {
    repeated Song songs = 1;
}

service SongService {
    rpc GetGenres(GetGenresRequest) returns (GetGenresResponse);
    rpc GetSongsByGenre(GetSongsByGenreRequest) returns (GetSongsByGenreResponse);
}